--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<h1>Recetas uniandes</h1>
-<app-recipe-list></app-recipe-list>
+
+<router-outlet>Recetas Uniandes</router-outlet>
+
+<div class="container mt-4">
+  <h1 class="text-center mb-4">Recetas Uniandes</h1>
+  <router-outlet></router-outlet>
+</div>
