--- a/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -47,6 +47,7 @@
               >Tipo:{{ recipe.tipo }}</span
             >
           </div>
+          </div>
 
           <h3 class="h5">Ingredientes</h3>
           <app-ingredient-list
